--- a/test.plist
+++ b/test.plist
@@ -1,55 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+
 <plist version="1.0">
+
 <dict>
- <key>items</key>
- <array>
-  <dict>
-   <key>assets</key>
-   <array>
-    <dict>
-     <key>kind</key>
-     <string>software-package</string>
-     <key>url</key>
-     <!-- http或者https链接的ipa文件地址 -->
-     <string>http://172.16.18.73/yidongbangong-ios-test.ipa</string>
-    </dict>
-    <dict>
-     <key>kind</key>
-     <string>full-size-image</string>
-     <key>needs-shine</key>
-     <true/>
-     <key>url</key>
-     <!-- http或者https链接的图片地址，可直接使用app对应的icon（分辨率没强制要求） -->
-     <string>https://yicbridge.yunjiacloud.com/home/yicbridge/app/ipa/logo_512.png</string>
-    </dict>
-    <dict>
-     <key>kind</key>
-     <string>display-image</string>
-     <key>needs-shine</key>
-     <true/>
-     <key>url</key>
-     <!-- http或者https链接的小图片地址，可直接使用app对应的icon（分辨率没强制要求） -->
-     <string>https://yicbridge.yunjiacloud.com/home/yicbridge/app/ipa/logo_57.png</string>
-    </dict>
-   </array>
-   <key>metadata</key>
-   <dict>
-    <key>bundle-identifier</key>
-    <!-- BundleID，就是新建app时的包名 -->
-    <!-- 盐城包名 com.yancheng.wisdomcourt  -->
-    <string>com.yunjiacloud.wisdomcourt</string>
-    <!-- <string>com.yunjiacloud.wisdomcourt</string> -->
-    <key>bundle-version</key>
-    <!-- 版本号 -->
-    <string>1.0.0</string>
-    <key>kind</key>
-    <string>software</string>
-    <key>title</key>
-    <!-- 安装app时的提示信息 -->
-    <string>智慧法院干警端正在安装中…</string>
-   </dict>
-  </dict>
- </array>
+
+<key>items</key>
+
+<array>
+
+<dict>
+
+<key>assets</key>
+
+<array>
+
+<dict>
+
+<key>kind</key>
+
+<string>software-package</string>
+
+<key>url</key>
+
+<string>http://172.16.18.73/yidongbangong-ios-test.ipa</string>
+
 </dict>
+
+</array>
+
+<key>metadata</key>
+
+<dict>
+
+<key>bundle-identifier</key>
+
+<string>com.yancheng.wisdomcourt</string>
+
+<key>bundle-version</key>
+
+<string>1.0.0</string>
+
+<key>kind</key>
+
+<string>software</string>
+
+<key>title</key>
+
+<string>智慧法院干警端正在安装中…</string>
+
+</dict>
+
+</dict>
+
+</array>
+
+</dict>
+
 </plist>
