--- a/test.plist
+++ b/test.plist
@@ -24,7 +24,7 @@
 
 <key>url</key>
 
-<string>http://172.16.18.73/yidongbangong-ios-test.ipa</string>
+<string>http://172.16.18.73/ydzhfy-ios.ipa</string>
 
 </dict>
 
@@ -48,7 +48,7 @@
 
 <key>title</key>
 
-<string>智慧法院干警端正在安装中…</string>
+<string>移动智慧法院</string>
 
 </dict>
 
