--- a/inner.plist
+++ b/inner.plist
@@ -24,7 +24,7 @@
 
 <key>url</key>
 
-<string>http://172.16.18.73/ydzhfy-ios.ipa</string>
+<string>http://172.16.18.73/zhydbg-ios-inner.ipa</string>
 
 </dict>
 
