--- a/outer.plist
+++ b/outer.plist
@@ -24,7 +24,7 @@
 
 <key>url</key>
 
-<string>http://221.226.214.14:20000/file-service/ydzhfy-ios.ipa</string>
+<string>http://221.226.214.14:20007/zhydbg-ios-outer.ipa</string>
 
 </dict>
 
